--- a/app/src/main/res/layout/activity_setting_edit_profile.xml
+++ b/app/src/main/res/layout/activity_setting_edit_profile.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:text="완료"
             android:textSize="17sp"
-            android:layout_marginRight="20dp"
+            android:padding="22dp"
             android:textColor="#707070"
             android:includeFontPadding="false"
             android:fontFamily="@font/nanum_barungothic_regular"
@@ -75,7 +75,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="127dp"
         android:layout_marginEnd="127dp"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="20dp"
+        android:paddingBottom="15dp"
+        android:paddingRight="15dp"
+        android:paddingLeft="15dp"
         android:fontFamily="@font/nanum_barungothic_regular"
         android:includeFontPadding="false"
         android:text="프로필 사진 바꾸기"
@@ -136,7 +139,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="49dp"
-        android:layout_marginTop="20dp"
+        android:paddingTop="20dp"
         android:layout_marginEnd="20dp"
         android:background="@null"
         android:ems="10"
