--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -66,11 +66,9 @@
 
         <EditText
             android:id="@+id/et_act_search_search_word"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginStart="46dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/nanum_barungothic_regular"
             android:includeFontPadding="false"
@@ -85,7 +83,9 @@
             app:layout_constraintVertical_bias="1.0"
             android:background="@null"
             android:imeOptions="actionSearch"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"/>
         <ImageView
             android:src="@drawable/ic_search"
             android:layout_width="wrap_content"
@@ -105,7 +105,7 @@
         android:fontFamily="@font/nanum_barungothic_bold"
         android:layout_marginLeft="26dp"
         android:layout_marginTop="27dp"/>
-
+s
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_search_recommend_word"
         android:layout_width="match_parent"
