--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -152,7 +152,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="20dp"
+        android:paddingRight="20dp"
         android:fontFamily="@font/nanum_barungothic_light"
         android:includeFontPadding="false"
         android:text="계정 로그아웃"
