--- a/app/src/main/res/layout/activity_signup_private.xml
+++ b/app/src/main/res/layout/activity_signup_private.xml
@@ -22,7 +22,7 @@
             android:textColor="#cdcdcd"
             android:includeFontPadding="false"
             android:textSize="17sp"
-            android:layout_marginRight="20dp"
+            android:padding="20dp"
             android:text="완료"
             android:layout_centerVertical="true"/>
 
