--- a/app/src/main/res/layout/activity_signup_start.xml
+++ b/app/src/main/res/layout/activity_signup_start.xml
@@ -108,14 +108,18 @@
             android:textColor="#242424"
             android:textSize="12sp"
             android:fontFamily="@font/nanum_barungothic_light"
-            android:includeFontPadding="false"/>
+            android:includeFontPadding="false"
+            android:layout_gravity="center_horizontal"/>
 
         <LinearLayout
             android:id="@+id/linear_act_signup_go_to_login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="6dp"
+            android:paddingTop="6dp"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:paddingBottom="20dp"
             android:layout_gravity="center">
 
             <TextView
