--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -79,7 +79,8 @@
                     android:includeFontPadding="false"
                     android:text="이아틱"
                     android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:layout_marginRight="20dp"/>
 
                 <TextView
                     android:id="@+id/txt__my_page_email"
