--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -42,6 +42,7 @@
     </RelativeLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/sv_fragment_my_page"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -74,13 +75,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="49dp"
+                    android:layout_marginRight="20dp"
                     android:layout_toRightOf="@id/img_my_page_profile"
                     android:fontFamily="@font/nanum_barungothic_bold"
                     android:includeFontPadding="false"
                     android:text="이아틱"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:layout_marginRight="20dp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/txt__my_page_email"
