--- a/app/src/main/res/layout/fragment_raw_article_list.xml
+++ b/app/src/main/res/layout/fragment_raw_article_list.xml
@@ -23,13 +23,13 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:text="읽지 않은 아티쿨" />
+            tools:text="읽지 않은 아티클" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.3dp"
         android:background="@color/very_light_pink_two" />
     
     <androidx.recyclerview.widget.RecyclerView
