--- a/app/src/main/res/layout/activity_setting_edit_profile.xml
+++ b/app/src/main/res/layout/activity_setting_edit_profile.xml
@@ -97,13 +97,7 @@
         android:background="#d1d1d1"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/view3"
-        android:layout_width="match_parent"
-        android:layout_height="0.6dp"
-        android:layout_marginTop="20dp"
-        android:background="#d1d1d1"
-        app:layout_constraintTop_toBottomOf="@+id/edit_profile_myinfo_et" />
+
 
     <TextView
         android:id="@+id/edit_profile_name_txt"
@@ -139,27 +133,18 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="49dp"
-        android:paddingTop="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:background="@null"
         android:ems="10"
         android:hint="이름"
         android:inputType="text"
         android:textSize="14sp"
+        android:textCursorDrawable="@drawable/cursor_drawable"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edit_profile_name_txt"
         app:layout_constraintTop_toTopOf="@+id/view5" />
 
-
-    <View
-        android:id="@+id/view7"
-        android:layout_width="284dp"
-        android:layout_height="0.6dp"
-        android:layout_marginStart="94dp"
-        android:layout_marginTop="15dp"
-        android:background="#d1d1d1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_profile_name_et" />
 
     <EditText
         android:id="@+id/edit_profile_myinfo_et"
@@ -169,11 +154,30 @@
         android:ems="10"
         android:gravity="start|top"
         android:hint="소개를 입력해주세요."
-        android:inputType="textMultiLine"
+        android:textCursorDrawable="@drawable/cursor_drawable"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/edit_profile_name_et"
         app:layout_constraintStart_toStartOf="@+id/edit_profile_name_et"
         app:layout_constraintTop_toTopOf="@+id/edit_profile_myinfo_txt" />
 
+
+    <View
+        android:id="@+id/view7"
+        android:layout_width="284dp"
+        android:layout_height="0.6dp"
+        android:layout_marginStart="94dp"
+        android:layout_marginTop="15dp"
+        android:background="#d1d1d1"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_name_et" />
+
+    <View
+        android:id="@+id/view3"
+        android:layout_width="match_parent"
+        android:layout_height="0.6dp"
+        android:layout_marginTop="20dp"
+        android:background="#d1d1d1"
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_myinfo_et" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
