--- a/app/src/main/res/layout/activity_make_new_archive.xml
+++ b/app/src/main/res/layout/activity_make_new_archive.xml
@@ -12,17 +12,18 @@
         android:layout_height="55dp">
 
         <TextView
+            android:id="@+id/txt_make_new_archive_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="새 아카이브"
-            android:textColor="@color/black"
-            android:textSize="17sp"
+            android:layout_centerInParent="true"
             android:fontFamily="@font/nanum_barungothic_regular"
             android:includeFontPadding="false"
-            android:layout_centerInParent="true"/>
+            android:text="새 아카이브"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
 
         <TextView
-            android:id="@+id/txt_act_make_new_archive_complete"
+            android:id="@+id/btn_act_make_new_archive_complete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
