--- a/app/src/main/res/layout/activity_my_page_scrap.xml
+++ b/app/src/main/res/layout/activity_my_page_scrap.xml
@@ -82,14 +82,14 @@
             app:layout_constraintStart_toEndOf="@+id/mypage_scrap_link_num"
             app:layout_constraintTop_toBottomOf="@+id/mypage_scrap_link_title" />
 
-        <Button
+        <ImageView
             android:id="@+id/btn_mypage_myarchive_modify"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="21dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="25dp"
             android:layout_marginBottom="8dp"
-            android:text="sample"
+            android:src="@drawable/btn_more"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
