--- a/app/src/main/res/layout/dlg_confirm_delete_archive.xml
+++ b/app/src/main/res/layout/dlg_confirm_delete_archive.xml
@@ -53,15 +53,16 @@
 
         <TextView
             android:id="@+id/btn_dlg_confirm_delete"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/delete"
-            android:textSize="14sp"
-            android:lineSpacingExtra="2sp"
             android:fontFamily="@font/nanum_barungothic_regular"
-            android:textStyle="bold"
+            android:textAlignment="center"
+            android:lineSpacingExtra="2sp"
+            android:text="@string/delete"
             android:textColor="@color/red"
+            android:textSize="14sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view8" />
@@ -78,15 +79,16 @@
 
         <TextView
             android:id="@+id/btn_dlg_confirm_cancel"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="17dp"
-            android:text="@string/cancel"
-            android:textSize="14sp"
-            android:lineSpacingExtra="2sp"
             android:fontFamily="@font/nanum_barungothic_regular"
+            android:textAlignment="center"
+            android:lineSpacingExtra="2sp"
+            android:text="@string/cancel"
             android:textColor="@color/black"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
