--- a/app/src/main/res/layout/dlg_confirm_delete_archive.xml
+++ b/app/src/main/res/layout/dlg_confirm_delete_archive.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="6dp"
     android:layout_marginHorizontal="45dp"
-    app:cardElevation="0dp">
+    app:cardElevation="0dp"
+    android:id="@+id/popup_delete_cardview">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
